# tp_2_ayp2

./: CMakeLists.txt  Edificio.cpp  Edificio.h  README.md  UML.drawio  Untitled Diagram.drawio  casillero.cpp  casillero.h  casillero_construible.cpp  casillero_construible.h  casillero_contruible.cpp  casillero_contruible.h  casillero_inaccesible.cpp  casillero_inaccesible.h  casillero_no_transitable.cpp  casillero_no_transitable.h  casillero_transitable.cpp  casillero_transitable.h  constantes.h  edificio.cpp  edificio.h  edificios.cpp  edificios.h  edificios.txt  emojis.h  juego.cpp  juego.h  lol  main  main.cpp  mapa.cpp  mapa.h  mapa.txt  material.cpp  material.h  materiales.cpp  materiales.h  materiales.txt  mensajes_pantalla.cpp  mensajes_pantalla.h  (+4 more)
TP1/: juego.h
TP1_ricky/: emojis.h  main  main.cpp  mensajes_pantalla.cpp  mensajes_pantalla.h  menu.cpp
tp_1/: edificios.cpp  edificios.h  edificios.txt  emojis.h  main  main.cpp  materiales.cpp  materiales.h  materiales.txt  mensajes_pantalla.cpp  mensajes_pantalla.h  menu.cpp  menu.h
